# noseeum

./: .aider.input.history  .gitignore  =1.0.0  Cargo.toml  MANIFEST.in  Makefile  README.md  agents-cli  commit.txt  commit_fix_language_dispatcher.txt  config.json  create_nfkc_map.py  create_registry.py  decoded_test_script.py  encoded_test_script.py  etq  glassworm.py  glasswormesque.ps1  install_security_tools.sh  requirements.txt  run_pipeline.sh  setup.py  shitpw.json  smuggler.py  smuggler_dropper.py  test_input.txt
.archive/: CLAUDE.md  QWEN.md  noseeums.md
agents/: .gitignore  CONFIGURATION.md  README.md  RUNTIME_ANALYSIS_DESIGN.md  USAGE.md  __init__.py  cli.py  commit.txt  config_sample.yaml  orchestrator.py  requirements.txt  setup.sh  tools_config.json
agents/analysis/: __init__.py  report_synthesizer.py  vulnerability_cartographer.py
agents/attack_dev/: __init__.py  payload_artisan.py  polyglot_specialist.py  stealth_optimizer.py
agents/base/: __init__.py  agent.py  communication.py  config_loader.py  memory.py  tools.py
docs/: GEMINI.md  UNICODE_SMUGGLING_N_MORE.md  USAGE.md
examples/: formatter_api_example.py  formatter_examples.sh
noseeum/: __init__.py  __init___1.py  cli.py  cli_format.py  config.py  error_handlers.py  evasion_library.py  formatter.py  go_attack.py  hangul_encoding.py  homoglyph.py  invisible.py  javascript_attack.py  language.py  linguistic_generator.py  swift_attack.py  test_validator.py  unassigned_planes.py  yara_generator.py
src/: main.rs  main_smuggled.rs
tests/: test_homoglyph.py  test_invisible.py
(+116 files in other folders)
